# deploy_to_vercel

./: .gitignore  README.MD
backend/: default.env  main.py  pyproject.toml  requirements.txt  vercel.json
backend/api/: __init__.py  schemas.py
backend/config/: __init__.py  config.py
backend/db/: __init__.py  db_init.py
backend/models/: MongoModelBase.py  TypedCollection.py  __init__.py  user.py
frontend/: default.env  package-lock.json  package.json
frontend/.react-router/types/: +routes.ts
frontend/.react-router/types/app/routes/+types/: users.$id.ts  users.new.ts
frontend/app/: root.tsx  routes.ts
frontend/app/api/: axiosInstance.ts  users.ts
frontend/app/components/: Nav.tsx
frontend/app/routes/: home.tsx  users.$id.tsx  users.new.tsx  users.tsx
frontend/app/types/: user.ts
frontend/app/welcome/: welcome.tsx
